# shackle

./: .clippy.toml  .editorconfig  .gitignore  .prettierignore  .prettierrc  404.html  CNAME  Cargo.toml  README.md  error-handling.html  foreword.html  index.html  interpreter.html  launch.json  microzinc.html  mzn-syntax.html  package-lock.json  package.json  print.html  process.html  rustfmt.toml  searchindex.js  searchindex.json
crates/flatzinc-serde/: Cargo.toml
crates/flatzinc-serde/corpus/: documentation_example.debug.txt  documentation_example.debug_ustr.txt  documentation_example.fzn  documentation_example.fzn.json  encapsulated_string.debug.txt  encapsulated_string.fzn.json  float_sets.debug.txt  float_sets.fzn.json  set_literals.debug.txt  set_literals.fzn.json
crates/flatzinc-serde/src/: encapsulate.rs  lib.rs  range_list.rs
crates/shackle/: Cargo.toml
crates/shackle-cli/: Cargo.toml
crates/shackle-cli/src/: compile.rs  main.rs
crates/shackle-compiler/: Cargo.toml
crates/shackle-compiler/src/: db.rs  file.rs  lib.rs
crates/shackle-compiler/src/constants/: ids.rs  mod.rs  tys.rs
crates/shackle-compiler/src/diagnostics/: error.rs  mod.rs  warning.rs
crates/shackle-compiler/src/hir/: db.rs  expression.rs  ids.rs  item.rs  mod.rs  pattern.rs  pattern_matching.rs  primitive.rs  scope.rs  source.rs  types.rs  validate.rs
crates/shackle-compiler/src/mir/: mod.rs  ty.rs
crates/shackle-compiler/src/syntax/: ast.rs  cst.rs  db.rs  mod.rs
crates/shackle-compiler/src/thir/: db.rs  item.rs  lower.rs  mod.rs  pretty_print.rs  sanity_check.rs  source.rs
crates/shackle-compiler/src/ty/: functions.rs  mod.rs  test.rs
crates/shackle-compiler/src/utils/: arena.rs  mod.rs  refmap.rs
crates/shackle-fmt/: Cargo.toml
crates/shackle-fmt/src/: container.rs  expression.rs  format.rs  ir.rs  item.rs  lib.rs  pattern.rs  types.rs
crates/shackle-fmt/tests/: formatting.rs  formatting_1.mzn  formatting_2.mzn  formatting_3.mzn  formatting_4.mzn  standard_library.rs
crates/shackle-fmt/tests/common/: mod.rs
crates/shackle-ls/: Cargo.toml
crates/shackle-ls/src/: db.rs  diagnostics.rs  dispatch.rs  extensions.rs  main.rs  utils.rs  vfs.rs
crates/shackle-ls/src/handlers/: completions.rs  format.rs  goto_definition.rs  hover.rs  mod.rs  references.rs  rename_handler.rs  rename_symbol.rs  semantic_tokens.rs  vfs.rs  view_ast.rs  view_cst.rs  view_format_ir.rs  view_hir.rs  view_pretty_print.rs  view_scope.rs
crates/shackle-runtime/: Cargo.toml
crates/shackle-runtime/src/: builtin.rs  error.rs  lib.rs  value.rs
crates/shackle-runtime/src/value/: num.rs  seq.rs  set.rs
crates/shackle/src/: arena.rs  db.rs  dzn.rs  error.rs  file.rs  lib.rs  refmap.rs  utils.rs  value.rs  warning.rs
crates/shackle/src/constants/: ids.rs  tys.rs
crates/shackle/src/data/: dzn.rs  json.rs  mod.rs  serde.rs
crates/shackle/src/diagnostics/: error.rs  mod.rs
crates/shackle/src/hir/: container.rs  db.rs  expression.rs  ids.rs  item.rs  mod.rs  pattern.rs  pattern_matching.rs  primitive.rs  scope.rs  source.rs  types.rs  validate.rs
crates/shackle/src/hir/lower/: item.rs  (+3 more)
crates/shackle/src/legacy/: mod.rs
crates/shackle/src/mir/: mod.rs  ty.rs
crates/shackle/src/syntax/: cst.rs  db.rs
crates/shackle/src/thir/: db.rs  domain.rs  expression.rs  item.rs  lower.rs  mod.rs  pretty_print.rs  sanity_check.rs  source.rs  type_specialise.rs
crates/shackle/src/ty/: functions.rs  mod.rs  test.rs
crates/shackle/src/utils/: refmap.rs
front/shackle-cli/: Cargo.toml
front/shackle-cli/src/: compile.rs  main.rs
front/shackle-ls/: Cargo.toml
front/shackle-ls/src/: diagnostics.rs  dispatch.rs  extensions.rs  main.rs  vfs.rs
front/shackle-ls/src/handlers/: completions.rs  diagnostics.rs  goto_definition.rs  hover.rs  mod.rs  vfs.rs  view_ast.rs  view_cst.rs  view_hir.rs  view_scope.rs
misc/tree-sitter-minizinc/: .gitignore  .prettierignore  Cargo.toml  Pipfile  binding.gyp  grammar.js  index.js  package.json  setup.py
misc/tree-sitter-minizinc/.github/workflows/: tree-sitter.yml
misc/tree-sitter-minizinc/bindings/rust/: build.rs  lib.rs
misc/tree-sitter-minizinc/corpus/: expressions.txt  items.txt  literals.txt  source_file.txt  types.txt
misc/tree-sitter-minizinc/queries/: highlights.scm  tags.scm
misc/tree-sitter-minizinc/src/: binding.cc  grammar.json  node-types.json  parser.c
parsers/tree-sitter-datazinc/: Cargo.toml  Makefile  Package.swift  binding.gyp  grammar.js  package.json  pyproject.toml  setup.py
parsers/tree-sitter-datazinc/bindings/c/: tree-sitter-datazinc.pc.in
parsers/tree-sitter-datazinc/bindings/go/: binding.go  binding_test.go  go.mod
parsers/tree-sitter-datazinc/bindings/node/: binding.cc  index.js
parsers/tree-sitter-datazinc/bindings/rust/: build.rs  lib.rs
parsers/tree-sitter-datazinc/corpus/: literals.txt
parsers/tree-sitter-datazinc/src/: grammar.json  node-types.json  parser.c
parsers/tree-sitter-eprime/: Cargo.toml  Makefile  Package.swift  binding.gyp  grammar.js  package.json  pyproject.toml  results.txt  setup.py
parsers/tree-sitter-eprime/bindings/c/: tree-sitter-eprime.h  tree-sitter-eprime.pc.in
parsers/tree-sitter-eprime/bindings/go/: binding.go  binding_test.go  go.mod
parsers/tree-sitter-eprime/bindings/node/: binding.cc  index.js
parsers/tree-sitter-eprime/bindings/rust/: lib.rs
parsers/tree-sitter-eprime/corpus/: examples.txt  expressions.txt  source_file.txt  types.txt
parsers/tree-sitter-eprime/src/: grammar.json  node-types.json  parser.c
parsers/tree-sitter-minizinc/: .gitignore  Cargo.toml  Makefile  Package.swift  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py
parsers/tree-sitter-minizinc/bindings/c/: tree-sitter-minizinc.h  tree-sitter-minizinc.pc.in
parsers/tree-sitter-minizinc/corpus/: expressions.txt  items.txt  literals.txt  source_file.txt  types.txt
parsers/tree-sitter-minizinc/queries/: case_expressions.scm  comments.scm  highlights.scm  identifiers.scm  tags.scm
parsers/tree-sitter-minizinc/src/: grammar.json  node-types.json  parser.c
(+760 files in other folders)
