[package]
name = "flatzinc-serde"
version = "0.2.0"
description = "FlatZinc serialization and deserialization"
authors = [
  "Jip J. Dekker <jip@dekker.one>",
  "Jason Nguyen <admin@cyderize.org>",
]

homepage = "https://www.minizinc.org/"
repository = "https://github.com/shackle-rs/shackle/"
license = "MPL-2.0"
keywords = ["minizinc", "flatzinc", "serde", "optimization", "serialization"]
exclude = ["/corpus"]

edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
expect-test = "1.4"
ustr = { version = "1.0", features = ["serde"] }
