[package]
name = "shackle-cli"
version = "0.1.0"
authors = ["Jip J. Dekker <jip@dekker.one>"]
license = "MPL-2.0"

edition = "2021"

[[bin]]
name = "shackle"
path = "src/main.rs"

[dependencies]
clap = { version = "4.3.0", features = ["cargo", "derive"] }
env_logger = "0.11.0"
humantime = "2.1.0"
log = "0.4.18"
miette = { version = "5.9.0", features = ["fancy"] }
shackle = { path = "../shackle" }
