[package]
name = "shackle-compiler"
version = "0.1.0"
authors = ["Jip J. Dekker <jip@dekker.one>"]
license = "MPL-2.0"

edition = "2021"

[dependencies]
log = "0.4.18"
miette = "7.0.0"
rustc-hash = "1.1.0"
salsa = { git = "https://github.com/salsa-rs/salsa" }
serde_json = "1.0.96"
stacker = "0.1.15"
thiserror = "1.0.40"
tree-sitter = "0.22.1"
tree-sitter-eprime = { path = "../../parsers/tree-sitter-eprime" }
tree-sitter-minizinc = { path = "../../parsers/tree-sitter-minizinc" }

[dev-dependencies]
expect-test = "1.4.1"
