[package]
edition = "2021"
name = "shackle-fmt"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.18"
rustc-hash = "1.1.0"
shackle-compiler = {path = "../shackle-compiler"}
tree-sitter = "0.22.1"
tree-sitter-minizinc = {path = "../../parsers/tree-sitter-minizinc"}

[dev-dependencies]
expect-test = "1.4.1"
glob = "0.3.1"
pretty_assertions = "1.4.0"
