[package]
name = "shackle-ls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.6"
env_logger = "0.9.0"
log = "0.4.14"
lsp-server = "0.6.0"
lsp-types = "0.93.0"
miette = "5.4.1"
serde_json = "1.0.81"
serde = { version = "1.0.137", features = ["derive"] }
threadpool = "1.8.1"
tree-sitter = "0.20.6"
tree-sitter-minizinc = { path = "../../parsers/tree-sitter-minizinc" }
shackle = { path = "../shackle" }
