[package]
name = "shackle-ls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.6"
env_logger = "0.10.0"
log = "0.4.17"
lsp-server = "0.6.0"
lsp-types = "0.93.2"
miette = "5.5.0"
serde_json = "1.0.91"
serde = { version = "1.0.151", features = ["derive"] }
threadpool = "1.8.1"
tree-sitter = "0.20.9"
tree-sitter-minizinc = { path = "../../parsers/tree-sitter-minizinc" }
shackle = { path = "../shackle" }
