[package]
name = "shackle-ls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.8"
env_logger = "0.10.0"
log = "0.4.18"
lsp-server = "0.7.0"
lsp-types = "0.95.0"
miette = "5.9.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.96"
shackle-compiler = { path = "../shackle-compiler" }
threadpool = "1.8.1"
tree-sitter = "0.20.10"
tree-sitter-minizinc = { path = "../../parsers/tree-sitter-minizinc" }

[dev-dependencies]
expect-test = "1.4.1"
