[package]
name = "shackle-runtime"
version = "0.1.0"
authors = ["Jip J. Dekker <jip@dekker.one>"]
license = "MPL-2.0"

edition = "2021"

[dependencies]
bilge = "0.2.0"
itertools = "0.11.0"
miette = "5.9.0"
once_cell = "1.18.0"
shackle-compiler = { path = "../shackle-compiler" }
thiserror = "1.0.40"
varlen = { version = "0.1.2", features = ["macro"] }

[dev-dependencies]
expect-test = "1.4.1"
