[package]
name = "shackle"
version = "0.1.0"
authors = ["Jip J. Dekker <jip@dekker.one>"]
license = "MPL-2.0"

edition = "2021"

[dependencies]
log = "0.4.17"
miette = "5.5.0"
rustc-hash = "1.1.0"
salsa = { git = "https://github.com/salsa-rs/salsa" }
serde_json = "1.0"
stacker = "0.1.15"
tempfile = "3.3.0"
thiserror = "1.0.38"
tree-sitter = "0.20.9"
tree-sitter-minizinc = { path = "../../parsers/tree-sitter-minizinc" }

[dev-dependencies]
expect-test = "1.4.0"
