[package]
name = "shackle"
version = "0.1.0"
authors = ["Jip J. Dekker <jip@dekker.one>"]
license = "MPL-2.0"

edition = "2021"

[dependencies]
itertools = "0.10.5"
log = "0.4.18"
miette = "5.9.0"
rustc-hash = "1.1.0"
salsa = { git = "https://github.com/salsa-rs/salsa" }
serde = "1.0.188"
serde_json = "1.0.96"
stacker = "0.1.15"
tempfile = "3.5.0"
thiserror = "1.0.40"
tree-sitter = "0.20.10"
tree-sitter-datazinc = { path = "../../parsers/tree-sitter-datazinc" }
tree-sitter-minizinc = { path = "../../parsers/tree-sitter-minizinc" }

[dev-dependencies]
expect-test = "1.4.1"
