[package]
name = "shackle"
version = "0.1.0"
authors = ["Jip J. Dekker <jip@dekker.one>"]
license = "MPL-2.0"

edition = "2021"

[dependencies]
itertools = "0.12"
log = "0.4.18"
rustc-hash = "1.1.0"
serde = "1.0.188"
serde_json = "1.0.96"
shackle-compiler = { path = "../shackle-compiler" }
tempfile = "3.5.0"
tree-sitter = "0.21.0"
tree-sitter-datazinc = { path = "../../parsers/tree-sitter-datazinc" }

[dev-dependencies]
expect-test = "1.4.1"
