[package]
name = "shackle-cli"
version = "0.1.0"
edition = "2021"
authors = ["Jip J. Dekker <jip@dekker.one>"]


[[bin]]
name = "shackle"
path = "src/main.rs"

[dependencies]
clap = "^3.0.0-beta.4"
env_logger = "^0.9"
log = "^0.4"
miette = { version = "^3.2", features = ["fancy"] }
shackle = { path = "../shackle" }
thiserror = "*"
