[package]
name = "shackle-cli"
version = "0.1.0"
edition = "2021"
authors = ["Jip J. Dekker <jip@dekker.one>"]


[[bin]]
name = "shackle"
path = "src/main.rs"

[dependencies]
clap = { version = "3.1.6", features = ["cargo", "derive"] }
env_logger = "0.9.0"
log = "0.4.14"
miette = { version = "4.2.1", features = ["fancy"] }
shackle = { path = "../shackle" }
