[package]
name = "tree-sitter-minizinc"
description = "MiniZinc grammar for the tree-sitter parsing library"
version = "0.1.0"
authors = ["Jip J. Dekker <jip@dekker.one>"]
readme = "bindings/rust/README.md"
keywords = ["incremental", "parsing", "minizinc"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/shackle-rs/shackle"
edition = "2021"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.17"

[build-dependencies]
cc = "^1.0"
