[package]
name = "tree-sitter-datazinc"
description = "datazinc grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "datazinc"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/shackle-rs/shackle"
edition = "2021"
license = "MIT"

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.22.1"

[build-dependencies]
cc = "1.0"
