[package]
name = "tree-sitter-eprime"
description = "Essence Prime grammar for the tree-sitter parsing library"
version = "0.1.0"
authors = ["Jip J. Dekker <jip@dekker.one>"]
license = "MPL-2.0"
keywords = ["incremental", "parsing", "essence", "eprime"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/shackle-rs/shackle"

edition = "2021"

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20"

[build-dependencies]
cc = "1.0"
